added API and console API data.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">Find Your Favorite Phone</h1>
+        <div class="d-flex mb-3 w-50 mx-auto bg-body shadow p-2">
+            <input id="search-input" type="text" class="form-control" placeholder="Enter your favorite phone name">
+            <button onclick="loadPhone()" class="btn btn-outline-success" type="button"
+                id="button-search">Search</button>
+        </div>
     </div>
     <script src="js/main.js"></script>
 </body>
