API data shown in UI.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <button onclick="loadPhone()" class="btn btn-outline-success" type="button"
                 id="button-search">Search</button>
         </div>
+        <p id="error" class="text-center text-danger"></p>
+        <!-- display all phones  -->
+        <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+
+        </div>
     </div>
     <script src="js/main.js"></script>
 </body>
