--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 id="button-search">Search</button>
         </div>
         <p id="error" class="text-center text-danger"></p>
+        <!-- phone details  -->
+        <div id="phone-details" class="w-50 mx-auto my-4"></div>
         <!-- display all phones  -->
         <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
 
