added sensors and others into phone details.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <p id="error" class="text-center text-danger"></p>
         <!-- phone details  -->
-        <div id="phone-details" class="w-50 mx-auto my-4"></div>
+        <div id="phone-details" class="w-50 mx-auto my-4 text-center"></div>
         <!-- display all phones  -->
         <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
 
