--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">Find Your Favorite Phone</h1>
-        <div class="d-flex mb-3 w-50 mx-auto bg-body shadow p-2">
+        <div class="d-flex mb-3  w-50 mx-auto bg-body shadow p-4 border-0 rounded">
             <input id="search-input" type="text" class="form-control" placeholder="Enter your favorite phone name">
-            <button onclick="loadPhone()" class="btn btn-outline-success" type="button"
+            <button onclick="loadPhone()" class="btn btn-outline-success ms-2" type="button"
                 id="button-search">Search</button>
         </div>
         <p id="error" class="text-center text-danger"></p>
+        <div id="spinner" class="spinner-grow mx-auto" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+
         <!-- phone details  -->
         <div id="phone-details" class="w-50 mx-auto my-4 text-center"></div>
         <!-- display all phones  -->
