--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">Find Your Favorite Phone</h1>
-        <div class="d-flex mb-3  w-50 mx-auto bg-body shadow p-4 border-0 rounded">
+        <div class="d-flex mb-4  w-75 mx-auto bg-body shadow p-4 border-0 rounded">
             <input id="search-input" type="text" class="form-control" placeholder="Enter your favorite phone name">
             <button onclick="loadPhone()" class="btn btn-outline-success ms-2" type="button"
                 id="button-search">Search</button>
@@ -27,9 +27,9 @@
         </div>
 
         <!-- phone details  -->
-        <div id="phone-details" class="w-50 mx-auto my-4 text-center"></div>
+        <div id="phone-details" class="w-50 mx-auto my-4 mt-4 text-center"></div>
         <!-- display all phones  -->
-        <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+        <div id="phones-container" class="row row-cols-1 row-cols-md-3 gy-4 my-4">
 
         </div>
     </div>
