--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <!-- display all phones  -->
+        <!------ display all phones  ----->
         <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4 my-2">
 
         </div>
